syntax = "proto3";

option go_package = "./spec";

service Control {
  rpc Command2Internal(RequestSync) returns (ResponseSync) {}
}

message RequestSync {
  Stations station = 1;
  enum State {
    UNKNOWN = 0;
    ON = 1;
    OFF = 2;
  }
  State state = 2;
}

message ResponseSync {
  enum Response {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILED = 2;
  }
  Response response = 1;
}

message Stations {
  enum StationId {
    unknown = 0;


    shinjuku_p1 = 1;
    shinjuku_p1 = 2;
    shinjuku_s1 = 3;
    shinjuku_s2 = 4;
    shinjuku_d1 = 5;
    shinjuku_d2 = 6;

    sakurajosui_p1 = 11;
    sakurajosui_p2 = 12;
    sakurajosui_s1 = 13;
    sakurajosui_s2 = 14;
    sakurajosui_s3 = 15;
    sakurajosui_s4 = 16;
    sakurajosui_d1 = 17;
    sakurajosui_d2 = 18;
    sakurajosui_d3 = 19;
    sakurajosui_d4 = 20;

    chofu_p1 = 31;
    chofu_p2 = 32;
    chofu_p3 = 33;
    chofu_p4 = 34;
    chofu_p5 = 35;
    chofu_s1 = 36;
    chofu_s2 = 37;
    chofu_s3 = 38;
    chofu_s4 = 39;
    chofu_d1 = 40;
    chofu_d2 = 41;
    chofu_d3 = 42;
    chofu_d4 = 43;
    chofu_d5 = 44;
    chofu_d6 = 45;

    hashimoto_s1 = 51;
    hashimoto_s2 = 52;
    hashimoto_d1 = 53;
    hashimoto_d2 = 54;

    hachioji_s1 = 61;
    hachioji_s2 = 62;
    hachioji_d1 = 63;
    hachioji_d2 = 64;

    wakabadai_p1 = 71;
    wakabadai_p2 = 72;
    wakabadai_s1 = 73;
    wakabadai_s2 = 74;
    wakabadai_d1 = 75;
    wakabadai_d2 = 76;
  }
  StationId stationId = 1;
}
